--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong><i>slanted</i> 2048 tile!</strong></p>
+      <p class="game-intro">Join the numbers and get to the <strong><i>rotated</i> 2048 tile!</strong></p>
       <a class="restart-button">New Game</a>
     </div>
 
-    <div class="game-container">
+    <div class="game-container" id="game-container">
       <div class="game-message">
         <p></p>
         <div class="lower">
@@ -40,7 +40,7 @@
         </div>
       </div>
 
-      <div class="grid-container">
+      <div class="grid-container" id="grid">
         <div class="grid-row">
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
