--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong><i>rotated</i> 2048 tile!</strong></p>
+      <a class="settings-button" onclick="openSettingsCLI()">Settings</a>
+      <p class="game-intro">Join the numbers and get to the <strong> 2048 tile!</strong></p>
+
+
       <a class="restart-button">New Game</a>
     </div>
+
+    
 
     <div class="game-container" id="game-container">
       <div class="game-message">
@@ -77,7 +82,7 @@
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This site is the official version of 2048. You can play it on your phone via <a href="http://git.io/2048">http://git.io/2048.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
+    <strong class="important">Note:</strong> Note: This is a mod of 2048. The real game is located <a href="https://play2048.co/">here</a>.
     </p>
     <hr>
     <p>
@@ -95,5 +100,6 @@
   <script src="js/local_storage_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
+  <script src="js/settings.js"></script>	
 </body>
 </html>
